Prevent application info from overflowing
Change the application list to a fixed table layout to prevent it from
overflowing in the window and limit the info column to a max width.
Also limit the info column in the detail view.

fixes #316

--- a/spring-boot-admin-server-ui/modules/applications/css/module.css
+++ b/spring-boot-admin-server-ui/modules/applications/css/module.css
@@ -78,6 +78,15 @@
   background-color: #f9f9f9;
 }
 
+table.application-list {
+  table-layout: fixed;
+  width: 100%;
+}
+.application-list td.scroll {
+  overflow-x: auto;
+  max-width: 400px;
+}
+
 .table .group-column {
   border-right: 1px solid #dddddd;
   color: #999999;
